--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["clsx", "pokeapi", "pokeball", "Pokemons"]
+  "cSpell.words": ["clsx", "pokeapi", "pokeball", "Pokemons", "svgr"]
 }
